--- a/desktop/css/featured.css
+++ b/desktop/css/featured.css
@@ -15,21 +15,25 @@
     transition: all 0.5s ease;
     font-size: 17px;
     border-right: 0.5px solid #f5f5f5; 
-
 }
 
-.view-nav {
+.desc-LOM {
+    margin-bottom: 15px;
+}
+
+.buttons-LOM {
+    display: flex;
+    flex-direction: row;
+}
+
+.view-nav, .play-LOM {
     all: unset;
     width: fit-content;
     height: fit-content;
-    /* background-color: #f5f5f5; */
     border-radius: 10px;
     padding: 8px;
-    margin-top: 10px;
     font-size: 13px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 
 .right-container {
@@ -157,4 +161,7 @@ button:hover {
     font-size: 24px;
     font-weight: bold;
     cursor: pointer;
+}
+a {
+    text-decoration: none;
 }
