--- a/login/css/loadingScreen.css
+++ b/login/css/loadingScreen.css
@@ -6,6 +6,7 @@
 
 html, body {
     height: 100%;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .background {
@@ -40,3 +41,27 @@ html, body {
     transition: opacity 0.4s ease-in-out;
 }
 
+.loading_text {
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    position: absolute;
+    top: 58%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    gap: 50px; 
+    color: white;
+    font-size: 0.8rem;
+    letter-spacing: 15px;
+    font-weight: bolder;
+    animation: fade 0.6s infinite alternate;
+}
+
+@keyframes fade {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
