--- a/desktop/css/about.css
+++ b/desktop/css/about.css
@@ -28,7 +28,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/desktop/images/web/img2.jpg');
+    background-image: url('/desktop/images/web/img2.JPG');
     background-size: cover;
     background-position: center; 
     filter: blur(3px); 
